--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,9 @@
 </head>
 
 <body class="gradient">
-	<p class="notice"><%= notice %></p>
-	<p class="alert"><%= alert %></p>
+<!-- TODO: make this not show up, when there is nothing happening!! -->
+	<p class="notice gradient"><%= notice %></p>
+	<p class="alert gradient"><%= alert %></p>
 	
 	<header>
 		<nav>
