adding lightbox files, no links yet

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -185,6 +185,7 @@ nav {
 
 .main {
 	width: 80%;
+	max-width: 1300px;
 	margin: 0 auto;
 	color: $blue;
 	font-family: $text-font;
@@ -314,7 +315,7 @@ a {
 		.prolile-picture {
 			width: 200px;
 			height: 200px;
-			background-image: url("./pp-placeholder.png");
+			background-image: url("./16403_10205415436969048_1767924328628846475_n.jpg");
 			background-size: cover;
 			background-position: center center;
 			margin: 1rem;
