task list: adding icons, changing name display to profile image (hardcoded for now)

--- a/app/views/groups/choose_user.html.erb
+++ b/app/views/groups/choose_user.html.erb
@@ -6,11 +6,11 @@
 		<div class="adding-fields">
 			<div class="add-user-field">
 				<%= text_field_tag "users[]" %>
-				<button type="button">Remove</button>
+				<button type="button" class="add-remove-extra-user-field">Remove</button>
 			</div>
 		</div>
 		
-		<button type="button" class="add-user-button">Add user field</button>
+		<button type="button" class="add-user-button add-remove-extra-user-field">Add user field</button>
 	</div>
 	
 	<div class="actions">
