--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -143,6 +143,16 @@ nav {
 	#Check_all {
 		margin-left: 2.55rem;
 	}
+	
+	.add-remove-extra-user-field {
+		background-color: lighten($blue, 10%);
+		padding: .5rem;
+		margin-bottom: .25rem;
+		color: $beige;
+		border: none;
+		font-family: $text-font;
+		text-shadow: none;
+	}
 }
 
 .notice, .alert {	
@@ -342,8 +352,6 @@ a {
 
 .group-member-list {
 	width: 100%;
-//	border-top: 1px solid $beige;
-//	border-bottom: 1px solid $beige;
 	margin: 1rem auto;
 	padding: 1rem;
 	text-align: center;
@@ -380,12 +388,14 @@ a {
 			
 	a {
 		line-height: 50px;
+		height: 50px;
 		font-size: 1rem;
 		margin-right: .5rem;
 	}
 	
 	img {
 		width: 50px;
+		height: 50px;
 	}
 }
 
@@ -404,23 +414,32 @@ a {
 	
 	li {
 		margin-bottom: 9px;
+		
+		&:hover .task-controls {
+			display: block;
+		}
 	}
 	
 	.task-controls {
 		display: none;
 		
 		a {
-			color: white;
-			text-decoration: none;
-			padding: 5px;
-			margin: 3px 0;
+			width: 25px;
+			
+			img {
+				width: 25px;
+			}
 		}
-		.delete {
-			background: $beige;
-		}
-		.edit {
-			background: darken($beige, 10%);
-		}
+	}
+	
+//	TODO: make this individual pictures
+	.assigned-user-thumbnail {
+		margin-bottom: -6px;
+		width: 25px;
+		height: 25px;
+		background-size: cover;
+		background-position: center;
+		border-radius: 50%;
 	}
 }
 
