--- a/app/views/tasks/_task_list.html.erb
+++ b/app/views/tasks/_task_list.html.erb
@@ -11,11 +11,14 @@
 				%>
 				<%= label_tag "complete-#{task.id}", task.name %>
 				
-				(<%= task.user.first_name %> <%= task.user.last_name %>)
-				<span class="task-controls right">
-					<%= link_to "Delete", task, method: :delete, data: { confirm: "Are you sure?"}, :class => "delete" %>
-					<%= link_to "Edit", edit_task_path(task), :class => "edit" %>		
-				</span>
+				<!-- (<%= task.user.first_name %> <%= task.user.last_name %>) -->
+				<%= image_tag "pp-placeholder.png", class: "assigned-user-thumbnail" %>
+				<div class="task-controls right">
+					<%= link_to image_tag("icons/Household-Waste-icon.png"), task, method: :delete, data: { confirm: "Are you sure?"}, class: "right" %>
+					<%= link_to image_tag("icons/Pencil-icon.png"), edit_task_path(task), class: "right" %>
+					<!--TODO: Link incorrect: -->
+					<%= link_to image_tag("icons/Speach-Bubble-icon.png"), edit_task_path(task), class: "right" %>
+				</div>
 			</li>
 		<% end %>
 	</ul>
