icons for profile stuff

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -317,8 +317,8 @@ a {
 			margin-left: 1rem;
 			width: 200px;
 			
-			a {
-				width: calc(50% - .5rem);
+			a img {
+				width: 50px;
 			}
 		}
 		
