--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -32,8 +32,8 @@
 		</div>
 		
 		<div class="link-with-icon">
-			<%= link_to image_tag("icons/Door-icon.png"), leave_group_path(@group), method: :delete, data: { confirm: "Are you sure?" }, class: "left" %>
-			<%= link_to "Leave the group", leave_group_path(@group), method: :delete, data: { confirm: "Are you sure?" }, class: "left" %>
+			<%= link_to image_tag("icons/Door-icon.png"), leave_group_path(@group), method: :delete, data: { confirm: "Are you sure you want to leave the group?" }, class: "left" %>
+			<%= link_to "Leave the group", leave_group_path(@group), method: :delete, data: { confirm: "Are you sure you want to leave the group?" }, class: "left" %>
 		</div>
 	</div>
 </div>
