--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
 <div class="front-image">
 	<!-- <h3>Habitat</h3> -->
+	<!-- <%= image_tag("dishes.png") %> -->
 	<p>A household organization app.</p>
 </div>
 
