--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -221,6 +221,7 @@ a {
 	background-size: cover;
 	background-position: center;
 	margin-top: 1rem;
+//	overflow: hidden;
 	
 //	h3 {
 //		text-align: center;
@@ -322,10 +323,9 @@ a {
 			}
 		}
 		
-		.prolile-picture {
+		.profile-picture {
 			width: 200px;
 			height: 200px;
-			background-image: url("./16403_10205415436969048_1767924328628846475_n.jpg");
 			background-size: cover;
 			background-position: center center;
 			margin: 1rem;
@@ -397,6 +397,10 @@ a {
 		width: 50px;
 		height: 50px;
 	}
+}
+
+.task-list-icon-wrapper {
+	overflow: hidden;
 }
 
 .task-section {
