--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
 
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f| %>
   <%= devise_error_messages! %>
 	
 	<div class="field">
@@ -26,10 +26,15 @@
 	</div>
 	
 	<div class="field">
+		<%= f.label :avatar %>
+		<%= f.file_field :avatar %>
+	</div>
+	
+	<div class="field">
 		<%= f.label :gender %>
 		<%= f.select(:gender) do %>
-			<% [['Other', 'other'], ['Female', 'female'], ['Male', 'male']].each do |c| -%>
-				<%= content_tag(:option, c.first, value: c.last) %>
+			<% [['Other', 'other'], ['Female', 'female'], ['Male', 'male']].each do |c| %>
+				<%= content_tag(:option, c.first, value: c.last, selected: resource.gender.downcase == c.last.downcase) %>
 			<% end %>
 		<% end %>
 	</div>
@@ -38,15 +43,6 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 	<br>
-<!--TODO: Those two here: -->
-  <div class="field">
-    I'd like an about field in here
-  </div>
-  <div class="field">
-    Profile pic upload!
-  </div>
-	<br>
-
   <div class="field">
     <%= f.label :password %> <!-- <i>(leave blank if you don't want to change it)</i><br /> -->
     <%= f.password_field :password, autocomplete: "off" %>
@@ -67,5 +63,5 @@
   </div>
 <% end %>
 
-<%= link_to "Back", :back %>
+<%= link_to "Back", user_path(resource) %>
 </div>
