--- a/app/views/tasks/_task_list.html.erb
+++ b/app/views/tasks/_task_list.html.erb
@@ -17,7 +17,7 @@
 					<%= link_to image_tag("icons/Household-Waste-icon.png"), task, method: :delete, data: { confirm: "Are you sure you would like to delete this task?"}, class: "right" %>
 					<%= link_to image_tag("icons/Pencil-icon.png"), edit_task_path(task), class: "right" %>
 					<!--TODO: Link incorrect: -->
-					<%= link_to image_tag("icons/Speach-Bubble-icon.png"), edit_task_path(task), class: "right" %>
+					<%= image_tag "icons/Speach-Bubble-icon.png", class: "right speech-bubble" %>
 				</div>
 				
 				<%= render partial: "tasks/comments", locals: {task: task} %>
