adding some ajax for comments, indentation fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
 					<%= link_to "See profile", current_user%>
 					<%= link_to "Log out", destroy_user_session_path, method: :delete, :class => "log-out" %>
 				</div>
-				<a href="#">Noticitations</a>
+				<a href="#">Graph</a>
 				</div>
 				<% end %>
 		</nav>
