--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,7 @@
 					<%= link_to "See profile", current_user%>
 					<%= link_to "Log out", destroy_user_session_path, method: :delete, :class => "log-out" %>
 				</div>
+				<!--TODO: make it only show if user has group -->
 				<% if current_user.group? %>
 					<a href="#">Graph</a>
 				<% end %>
@@ -48,7 +49,7 @@
 		<%= yield %>
 	</div>
 	
-	<footer class="row">
+	<footer>
 		<div>
 			<p>Final project | <i>Multimedia Design &amp; Communication '15</i></p>
 			<p>&copy; Marie Crabit | 2015</p>
