--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -5,12 +5,12 @@
 <h2>Group members:</h2>
 <ul class="group-member-list gradient">
 	<% @group.users.each do |user| %>
-		<li>
-<!--TODO: make bg image -->
-			<%= image_tag user.avatar.url, alt: "User's profile picture"%> <!--TODO: replase in alt 'Users' by actual name and add it into the link-->
-			<h3><%= link_to "#{user.first_name} #{user.last_name}", user %></h3>
-			<h4>Score: <%= user.total_score %></h4>
-		</li>
+	<li>
+		<!--TODO: make bg image -->
+		<div class="group-member" style="background-image: url(<%= image_path user.avatar.url %>);"></div>
+		<h3><%= link_to "#{user.first_name}", user %></h3>
+		<h4>Score: <%= user.total_score %></h4>
+	</li>
 	<% end %>
 </ul>
 
@@ -39,7 +39,7 @@
 	</div>
 </div>
 
-		<div class="link-with-icon">
-			<%= link_to image_tag("icons/Household-Waste-icon.png"), @group, method: :delete, data: { confirm: "Are you really sure you want to delete this group?" }, class: "left" %>
-			<%= link_to "Delete group", @group, method: :delete, data: { confirm: "Are you really sure you want to delete this group?" }, class: "left" %>
-		</div>
+<div class="link-with-icon">
+	<%= link_to image_tag("icons/Household-Waste-icon.png"), @group, method: :delete, data: { confirm: "Are you really sure you want to delete this group?" }, class: "left" %>
+	<%= link_to "Delete group", @group, method: :delete, data: { confirm: "Are you really sure you want to delete this group?" }, class: "left" %>
+</div>
