--- a/app/views/tasks/_comments.html.erb
+++ b/app/views/tasks/_comments.html.erb
@@ -75,6 +75,7 @@
 				<%= f.label "image_name_unlike-2-iconpng", image_tag("feedback-emoticons/Unlike-2-icon.png"), class: "stamp" %>
 			</div>
 	
+<!-- TODO: button style not applied o.O -->
 			<div class="actions">
 				<%= f.submit class: "button, stamp-submit" %>
 			</div>
