--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -557,6 +557,11 @@ a {
 	}
 }
 
+#graph {
+	margin: 2rem auto;
+	display: block;
+}
+
 footer {
 	font-family: $text-font;
 	border-top: 1px solid $beige;
